@@ -248,6 +248,9 @@
 	Fixed 'relativenumber' being effectively ignored in inactive pane on
 	UI redraw from active pane.  Thanks to filterfalse.
 
+	Fixed bar (`|`) being treated as command separator in /pattern/ passed to
+	:[un]select.  Thanks to filterfalse.
+
 0.9.1-beta to 0.9.1
 
 	Fixed :clone and :copy refusing to copy broken symbolic links, even though C
